# sqlite-benchmark

./: Cargo.toml  db.sqlite
src/: main.rs  migration.rs  stats.rs
src/scenarios/: index.rs  index_mixed.rs  index_read.rs  mod.rs  multi.rs  simple.rs  simple_read.rs  single_mutex.rs  wal.rs  wal_read.rs  wal_synchronous.rs  wal_synchronous_memory.rs  wal_synchronous_memory_read.rs  wal_synchronous_multi.rs  wal_synchronous_read.rs
