[package]
name = "sqlite-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json", "functions", "limits", "chrono", "uuid", "extra_check"] }
rusqlite_migration = "1.0.2"